[project]
authors = [{name = "Vladyslav Zahorui", email = "vzahorui.dev@gmail.com"}]
dependencies = []
name = "vzahorui.github.io"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
vzahorui_github_io = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterlab = ">=4.4.5,<5"
numpy = ">=2.3.2,<3"
seaborn = ">=0.13.2,<0.14"
